[package]
name = "fppe"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/rhzx86/fppe"
description = "Deterministic fixed point physics engine"
categories = [ "game-development", "mathematics", "simulation" ]
keywords = [ "simulation", "physics", "3d", "fixed" ]

[dependencies]
bitflags = "2.1.0"
cordic = "0.1.5"
fixed = "1.23.1"
fixed-macro = "1.2.0"

[dev-dependencies]
console = "0.15.5"
